# VulkanGuide

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.sh  imgui.ini  load_settings.cap  run.sh  shaderbuild.sh
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp
src/: CMakeLists.txt  imgui.ini  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/loader/: vk_loader.cpp  vk_loader.h
